// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="c7n-list c7n-list-split"
>
  <div>
    <div
      class="c7n-spin-nested-loading"
    >
      <div
        class="c7n-spin-container"
      >
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-meta"
          >
            <div
              class="c7n-list-item-meta-avatar"
            >
              <span
                class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="c7n-list-item-meta-content"
            >
              <h4
                class="c7n-list-item-meta-title"
              >
                <a
                  href="https://choerodon.github.io/choerodon-ui/"
                >
                  Ant Design Title 1
                </a>
              </h4>
              <div
                class="c7n-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-meta"
          >
            <div
              class="c7n-list-item-meta-avatar"
            >
              <span
                class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="c7n-list-item-meta-content"
            >
              <h4
                class="c7n-list-item-meta-title"
              >
                <a
                  href="https://choerodon.github.io/choerodon-ui/"
                >
                  Ant Design Title 2
                </a>
              </h4>
              <div
                class="c7n-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-meta"
          >
            <div
              class="c7n-list-item-meta-avatar"
            >
              <span
                class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="c7n-list-item-meta-content"
            >
              <h4
                class="c7n-list-item-meta-title"
              >
                <a
                  href="https://choerodon.github.io/choerodon-ui/"
                >
                  Ant Design Title 3
                </a>
              </h4>
              <div
                class="c7n-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-meta"
          >
            <div
              class="c7n-list-item-meta-avatar"
            >
              <span
                class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
              >
                <img
                  src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                />
              </span>
            </div>
            <div
              class="c7n-list-item-meta-content"
            >
              <h4
                class="c7n-list-item-meta-title"
              >
                <a
                  href="https://choerodon.github.io/choerodon-ui/"
                >
                  Ant Design Title 4
                </a>
              </h4>
              <div
                class="c7n-list-item-meta-description"
              >
                Ant Design, a design language for background applications, is refined by Ant UED Team
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="c7n-list c7n-list-split c7n-list-grid"
>
  <div>
    <div
      class="c7n-spin-nested-loading"
    >
      <div
        class="c7n-spin-container"
      >
        <div
          class="c7n-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            class="c7n-col-6"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-6"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-6"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-6"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-load.md correctly 1`] = `
<div
  class="demo-infinite-container"
>
  <div>
    <div
      class="c7n-list c7n-list-split"
    >
      <div>
        <div
          class="c7n-spin-nested-loading"
        >
          <div
            class="c7n-spin-container"
          >
            <div
              class="c7n-list-empty-text"
            >
              No data
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-virtualized-load.md correctly 1`] = `
<div
  class="c7n-list c7n-list-split"
>
  <div>
    <div
      class="c7n-spin"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-default c7n-spin-dot"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/loadmore.md correctly 1`] = `
<div
  class="c7n-list demo-loadmore-list c7n-list-split c7n-list-loading c7n-list-something-after-last-item"
>
  <div>
    <div
      class="c7n-spin c7n-spin-spinning"
    >
      <div
        class="c7n-progress c7n-progress-loading c7n-progress-status-normal c7n-progress-show-info c7n-progress-default c7n-spin-dot"
      >
        <div
          class="c7n-progress-inner"
        >
          <svg
            viewBox="0 0 50 50"
          >
            <circle
              cx="25"
              cy="25"
              r="20"
            />
          </svg>
        </div>
      </div>
    </div>
    <div
      style="text-align:center;margin-top:12px;height:32px;line-height:32px"
    >
      <button
        class="c7n-btn c7n-btn-flat"
        type="button"
      >
        <span>
          loading more
        </span>
        <div
          class="c7n-ripple-wrapper"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/resposive.md correctly 1`] = `
<div
  class="c7n-list c7n-list-split c7n-list-grid"
>
  <div>
    <div
      class="c7n-spin-nested-loading"
    >
      <div
        class="c7n-spin-container"
      >
        <div
          class="c7n-row"
          style="margin-left:-8px;margin-right:-8px"
        >
          <div
            class="c7n-col-xs-24 c7n-col-sm-12 c7n-col-md-6 c7n-col-lg-6 c7n-col-xl-4 c7n-col-xxl-8"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 1
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-xs-24 c7n-col-sm-12 c7n-col-md-6 c7n-col-lg-6 c7n-col-xl-4 c7n-col-xxl-8"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 2
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-xs-24 c7n-col-sm-12 c7n-col-md-6 c7n-col-lg-6 c7n-col-xl-4 c7n-col-xxl-8"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 3
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-xs-24 c7n-col-sm-12 c7n-col-md-6 c7n-col-lg-6 c7n-col-xl-4 c7n-col-xxl-8"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 4
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-xs-24 c7n-col-sm-12 c7n-col-md-6 c7n-col-lg-6 c7n-col-xl-4 c7n-col-xxl-8"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 5
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="c7n-col-xs-24 c7n-col-sm-12 c7n-col-md-6 c7n-col-lg-6 c7n-col-xl-4 c7n-col-xxl-8"
          >
            <div
              class="c7n-list-item"
              style="padding-left:8px;padding-right:8px"
            >
              <div
                class="c7n-list-item-content c7n-list-item-content-single"
              >
                <div
                  class="c7n-card c7n-card-bordered"
                >
                  <div
                    class="c7n-card-head"
                  >
                    <div
                      class="c7n-card-head-wrapper"
                    >
                      <div
                        class="c7n-card-head-title"
                      >
                        Title 6
                      </div>
                    </div>
                  </div>
                  <div
                    class="c7n-card-body"
                  >
                    Card content
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/simple.md correctly 1`] = `
<div>
  <h3
    style="margin-bottom:16px"
  >
    Default Size
  </h3>
  <div
    class="c7n-list c7n-list-split c7n-list-bordered c7n-list-something-after-last-item"
  >
    <div
      class="c7n-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="c7n-spin-nested-loading"
      >
        <div
          class="c7n-spin-container"
        >
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7n-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Small Size
  </h3>
  <div
    class="c7n-list c7n-list-sm c7n-list-split c7n-list-bordered c7n-list-something-after-last-item"
  >
    <div
      class="c7n-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="c7n-spin-nested-loading"
      >
        <div
          class="c7n-spin-container"
        >
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7n-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Large Size
  </h3>
  <div
    class="c7n-list c7n-list-lg c7n-list-split c7n-list-bordered c7n-list-something-after-last-item"
  >
    <div
      class="c7n-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div>
      <div
        class="c7n-spin-nested-loading"
      >
        <div
          class="c7n-spin-container"
        >
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Racing car sprays burning fuel into crowd.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Japanese princess to wed commoner.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Australian walks 100km after outback crash.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Man charged over missing wedding girl.
            </div>
          </div>
          <div
            class="c7n-list-item"
          >
            <div
              class="c7n-list-item-content c7n-list-item-content-single"
            >
              Los Angeles battles huge wildfires.
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7n-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="c7n-list c7n-list-vertical c7n-list-lg c7n-list-split c7n-list-something-after-last-item"
>
  <div>
    <div
      class="c7n-spin-nested-loading"
    >
      <div
        class="c7n-spin-container"
      >
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-extra-wrap"
          >
            <div
              class="c7n-list-item-main"
            >
              <div
                class="c7n-list-item-meta"
              >
                <div
                  class="c7n-list-item-meta-avatar"
                >
                  <span
                    class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="c7n-list-item-meta-content"
                >
                  <h4
                    class="c7n-list-item-meta-title"
                  >
                    <a
                      href="https://choerodon.github.io/choerodon-ui/"
                    >
                      choerodon ui part 0
                    </a>
                  </h4>
                  <div
                    class="c7n-list-item-meta-description"
                  >
                    Choerodon UI, An enterprise-class UI design language and React-based implementation.
                  </div>
                </div>
              </div>
              <div
                class="c7n-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="c7n-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="c7n-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-extra-wrap"
          >
            <div
              class="c7n-list-item-main"
            >
              <div
                class="c7n-list-item-meta"
              >
                <div
                  class="c7n-list-item-meta-avatar"
                >
                  <span
                    class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="c7n-list-item-meta-content"
                >
                  <h4
                    class="c7n-list-item-meta-title"
                  >
                    <a
                      href="https://choerodon.github.io/choerodon-ui/"
                    >
                      choerodon ui part 1
                    </a>
                  </h4>
                  <div
                    class="c7n-list-item-meta-description"
                  >
                    Choerodon UI, An enterprise-class UI design language and React-based implementation.
                  </div>
                </div>
              </div>
              <div
                class="c7n-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="c7n-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="c7n-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-extra-wrap"
          >
            <div
              class="c7n-list-item-main"
            >
              <div
                class="c7n-list-item-meta"
              >
                <div
                  class="c7n-list-item-meta-avatar"
                >
                  <span
                    class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="c7n-list-item-meta-content"
                >
                  <h4
                    class="c7n-list-item-meta-title"
                  >
                    <a
                      href="https://choerodon.github.io/choerodon-ui/"
                    >
                      choerodon ui part 2
                    </a>
                  </h4>
                  <div
                    class="c7n-list-item-meta-description"
                  >
                    Choerodon UI, An enterprise-class UI design language and React-based implementation.
                  </div>
                </div>
              </div>
              <div
                class="c7n-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="c7n-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="c7n-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-extra-wrap"
          >
            <div
              class="c7n-list-item-main"
            >
              <div
                class="c7n-list-item-meta"
              >
                <div
                  class="c7n-list-item-meta-avatar"
                >
                  <span
                    class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="c7n-list-item-meta-content"
                >
                  <h4
                    class="c7n-list-item-meta-title"
                  >
                    <a
                      href="https://choerodon.github.io/choerodon-ui/"
                    >
                      choerodon ui part 3
                    </a>
                  </h4>
                  <div
                    class="c7n-list-item-meta-description"
                  >
                    Choerodon UI, An enterprise-class UI design language and React-based implementation.
                  </div>
                </div>
              </div>
              <div
                class="c7n-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="c7n-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="c7n-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
        <div
          class="c7n-list-item"
        >
          <div
            class="c7n-list-item-extra-wrap"
          >
            <div
              class="c7n-list-item-main"
            >
              <div
                class="c7n-list-item-meta"
              >
                <div
                  class="c7n-list-item-meta-avatar"
                >
                  <span
                    class="c7n-avatar c7n-avatar-circle c7n-avatar-image"
                  >
                    <img
                      src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                    />
                  </span>
                </div>
                <div
                  class="c7n-list-item-meta-content"
                >
                  <h4
                    class="c7n-list-item-meta-title"
                  >
                    <a
                      href="https://choerodon.github.io/choerodon-ui/"
                    >
                      choerodon ui part 4
                    </a>
                  </h4>
                  <div
                    class="c7n-list-item-meta-description"
                  >
                    Choerodon UI, An enterprise-class UI design language and React-based implementation.
                  </div>
                </div>
              </div>
              <div
                class="c7n-list-item-content"
              >
                We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
              </div>
              <ul
                class="c7n-list-item-action"
              >
                <li>
                  <span>
                    <i
                      class="icon icon-star-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-like-o"
                      style="margin-right:8px"
                    />
                    156
                  </span>
                  <em
                    class="c7n-list-item-action-split"
                  />
                </li>
                <li>
                  <span>
                    <i
                      class="icon icon-message"
                      style="margin-right:8px"
                    />
                    2
                  </span>
                </li>
              </ul>
            </div>
            <div
              class="c7n-list-item-extra"
            >
              <img
                alt="logo"
                src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
                width="272"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c7n-list-pagination"
    >
      <ul
        class="c7n-pagination c7n-pagination-tiny"
        unselectable="unselectable"
      >
        <li
          class="c7n-pagination-options"
        >
          <span
            class="c7n-pagination-options-label"
          >
            Items / page
          </span>
          <div
            class="c7n-pagination-options-size-changer c7n-select c7n-select-has-value c7n-select-enabled"
          >
            <div
              aria-autocomplete="list"
              aria-expanded="false"
              aria-haspopup="true"
              class="c7n-select-selection
            c7n-select-selection--single"
              role="combobox"
              tabindex="0"
            >
              <div
                class="c7n-select-selection__rendered"
              >
                <div
                  class="c7n-select-selection-selected-value"
                  style="opacity:1"
                  title="10"
                >
                  10
                </div>
                <span
                  class="c7n-select-arrow"
                  style="user-select:none;-webkit-user-select:none"
                  unselectable="unselectable"
                >
                  <i
                    class="icon icon-arrow_drop_down"
                  />
                  <b />
                </span>
              </div>
            </div>
            <div
              class="c7n-select-underline"
            >
              <span
                class="c7n-select-ripple"
              />
            </div>
          </div>
        </li>
        <li
          class="c7n-pagination-total-text"
        >
          1 - 5 / 5
        </li>
        <li
          aria-disabled="true"
          class="c7n-pagination-disabled c7n-pagination-first"
          title="First Page"
        >
          <button
            class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-first_page"
            />
            <div
              class="c7n-ripple-wrapper"
            />
          </button>
        </li>
        <li
          aria-disabled="true"
          class="c7n-pagination-disabled c7n-pagination-prev"
          title="Previous Page"
        >
          <button
            class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-navigate_before"
            />
            <div
              class="c7n-ripple-wrapper"
            />
          </button>
        </li>
        <li
          aria-disabled="true"
          class="c7n-pagination-disabled c7n-pagination-next"
          title="Next Page"
        >
          <button
            class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-navigate_next"
            />
            <div
              class="c7n-ripple-wrapper"
            />
          </button>
        </li>
        <li
          aria-disabled="true"
          class="c7n-pagination-disabled c7n-pagination-last"
          title="Last Page"
        >
          <button
            class="c7n-btn c7n-btn-circle c7n-btn-icon-only c7n-btn-flat"
            disabled=""
            type="button"
          >
            <i
              class="icon icon-last_page"
            />
            <div
              class="c7n-ripple-wrapper"
            />
          </button>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
